[ADD] add flink, fix flume heap stack size